@@ -52,11 +52,11 @@ DIST perl-5.18.2-patches-2.tar.bz2 17153 SHA256 2d203611d9df9d63ed972a37db4927e5
 DIST perl-5.18.2.tar.bz2 14058513 SHA256 06a0cd490be36d829606aa41d8c9c4c72ae70542f8d4f23ec554335b3d9e2746 SHA512 7129f56b33724a49498af22977e9e995791c8de736b204124e21d170f1a7419e7b8c6dbc57d76216e4aebcb4b42e61c4075f96ebf06a13523287966222527535 WHIRLPOOL 2acee8f9d7ee5b9f265c6cee625d67efb9ddad7164787faa8cb50707cc53914fb78420e1450e85180fb093804ae84cb301dd274aa4412f4b899aacf1f15bd0cb
 DIST perl-5.20.0-patches-1.tar.bz2 12717 SHA256 baf3d0d19942a760a9a978f3849daf4aeb690f9396d8593e5dcfdfc2bc54899f SHA512 91f38153093ddc4bd5d8807c7eb5bfbad7b48c0b9f10c847d39e57c32aa86b349696e1edff16763b4b63a247214e4e529baa74dd19dc09d6185e3eeeba90abc5 WHIRLPOOL 4f45e064ac3c2f0f4fad7dcbac5eceafadda0cfda5e869850f878f545c5961db4afd53450226716bc8460627fd5404a63eba300fdda7201512d7d18de912b6f5
 DIST perl-5.20.0.tar.bz2 13770469 SHA256 1e3e23c11d58dcfb8610fec76ad32a84482c7e221e12dfd8c63f141e004d30f2 SHA512 792f15800038ecd678f4a8cf8b9f329259ca46e3da2b18b94c97d1ab3b43efdf07b29975d4ffe83c38ca81bca672307dd6e6e60a22eb3ae957c8aab34b835ad9 WHIRLPOOL 245b8851aaa0cbac6d6e50a1294e8f6e27932109a2c21b3cf72e1e3dd4f69707de0209eb8721f52f76ff55ea030fa5a56e10a955c49052db8ab6f8a355b0b777
-DIST perl-5.20.1-patches-1.tar.bz2 12717 SHA256 baf3d0d19942a760a9a978f3849daf4aeb690f9396d8593e5dcfdfc2bc54899f SHA512 91f38153093ddc4bd5d8807c7eb5bfbad7b48c0b9f10c847d39e57c32aa86b349696e1edff16763b4b63a247214e4e529baa74dd19dc09d6185e3eeeba90abc5 WHIRLPOOL 4f45e064ac3c2f0f4fad7dcbac5eceafadda0cfda5e869850f878f545c5961db4afd53450226716bc8460627fd5404a63eba300fdda7201512d7d18de912b6f5
+DIST perl-5.20.1-patches-1.tar.xz 13704 SHA256 56fb83302de7a662b5c437ef060f74dc74f1b8e13c183222182d62537e13607d SHA512 46e51a3ae72591d595ed659002f33d111fa7346fe5c51fdabd4e55c789411150ee7eccac209f6203c64cef0fc3cbf31201c9a1e9ba361f1c5bb75192e6938590 WHIRLPOOL 8ccc43f7138a3c9a52204fe36d88a04fb1b39e05cb4fde6c2bd0a1e31cda47034a5d3dc5ea48fbbbf592e1c922436526c69cb9e8aaf5a74193aa30e7e1626a81
 DIST perl-5.20.1.tar.bz2 13676155 SHA256 ede5ded37e7fb6139b04728cfca826f17076f9888dbfd100a56834dbeb04657c SHA512 b070b66800d86357df9fc4b2323d0bd97cc5ba6f92a26991d4c41ba58c94386bde91f9c2bff19920647375116e8642360eda8e6cc753cc451c110c3bf9576787 WHIRLPOOL 359e13613826c7c76844bbb32be453aad4103d382a99cb8df0f25c6ec3e68a16962b891c72478d2803adc4573aff161405ddf3274dfe1c23236037ac23e7fc3a
 EBUILD perl-5.16.3.ebuild 4320 SHA256 48fe6c0980d866928449355bd38b7818d8821af26fda72d9ae206e00835875ae SHA512 72b3986cd3a246484754a763d07e6b903295861b9de6227ab0acd6bc9fa80a21680192c289ebeed811e489a1ad817d53a9b5ce6688d19c6203daf6ce58c3d282 WHIRLPOOL e4758d3bb21b6a2c565bf456e8d64eecdb457929af21e9305b956c8507947b2e772151f0bee7b1444dd94b4c530fd011ecee02ff986d875312583e11dafd78c9
 EBUILD perl-5.18.2-r1.ebuild 4347 SHA256 5caa5a572bb8516d7b8836c01dc9d92578f25e85de2185f24730b5a7f031365e SHA512 460256dae21a5915d665a3cc62cf0bffb52684fdcb779324a4e8a392eb40562b9d39642f475928d2837cfddfc1180449de295efb47dae2ac6ca1cd13154460c7 WHIRLPOOL a1a1ccfc925982018e480dfb509ce12d78309f79f7bd4a6694bb762808a0833c1006c825aa23e07083234ce5e668f153fd0b0e976b3a3259be2398b2195f5d93
 EBUILD perl-5.20.0-r1.ebuild 4338 SHA256 bb79ecfed7b30e595a2722b3b5563ca95c7b20ed9af5a5603019d52246cda486 SHA512 e9ba4ca071d150ff68369048f1d326be1670b982db67b8b5116d1e82ce38d5cb8a43992fe6e596264ab2a9049ed1149b629ba269e37b78830ad72f979b87e248 WHIRLPOOL a01231ac286251ab8c98e46e5279d027f9c2b9ba5f6cb47831c5a7b63a895a60be3ae470ecaf3f113348bff0c2adbb6cbaa53b289b18c7ba9b8051c53768feb2
-EBUILD perl-5.20.1.ebuild 4332 SHA256 cfb84ede0ec7c5b646788a45fd74c4c19018c2c0e938d4fdf8effdc0afc8de98 SHA512 652c41e0cc5406640fa7b3c8217bdea81f30736d9034c422bff14801aee519ee4c88fa20bea19f24a7ac3731ccc5b07f0082d8a906db82958d3c0c8d69e93774 WHIRLPOOL 24cef899fbb217cf4adb845864060324ccb70cec169ceb38ff6ad6d3b182ef5a3407c0a0e982fc21dff80edeebb8e9158544bcd4544027b133e6b3ec4cf6102f
-MISC ChangeLog 81292 SHA256 4fabac6f2c0848e30442bdb6d05959fa50c88c416b1e017f91aeeca67a515bd6 SHA512 24d5401e7bf71205561de862be053811b403e0416ced307007cf1664e505a808910f0d9fbb6c4cc22dee3827a9193fdd72766aaaf7038f2c6595b3592a13b535 WHIRLPOOL c1bd1771bcbdff805124e3c586996e7353aafc36976be4589d2980e291fd0a36c8fc51a349f6af46fa2abef2b9f64df7e280664790b3fb0755246d2eaaa3b034
+EBUILD perl-5.20.1.ebuild 4330 SHA256 8dcb0ebddcddc92833f1d6a7a1f9f0c3c5ddf8b30e205bac9f7b0c55f805c982 SHA512 951c3ca3eb0c111e3cefcac006cf02b471e1d15cb57eb59c2c4f32d2100482b320ca7a3f4fed5702a6fbd6cf567355b13a6b233b33ea19e187a6c18568f7c335 WHIRLPOOL 1b7fa6c878b00d8ac29cfda580b1708c03f93737b634784333095b624c84a0423c0667e506ad962797cebfcf4f09c50f589a641cee7339c601aa6e5cdedffdf2
+MISC ChangeLog 81400 SHA256 59e508868383dbf65e0fa86946f1f7d76361e7596922ed63a752d112e941bfcc SHA512 b124a5bb39c3d76a21f1d0312a146db7a2eeee3bab244ae4446fe2ff1b5c4cbdbf8b8f451efd796cdbff0768162682c3b4b6a7f8a459b401b28a006d00e2f48b WHIRLPOOL ca1b2730d0e550c32c7e4158c1fcd56896f68b3974491baddf32aa492e1226d6a61e0bef8ba9179c15c918930ccf0a18eaea958d339dae345c71a41abd74464f
 MISC metadata.xml 257 SHA256 94d99e58fcedfe7951797e5cbd70790c21b87c1e07a7003f650632bb0a4f2300 SHA512 caf80fd9d8931ab6d476afc21fcc840894cdb4cf548d196958321a0ba09ab83ff98de3f8b5f01701f8101fd0ec0fcfc35ae6e572aa8ef499b106c3ac8cabb769 WHIRLPOOL 7793b51d68b2c56ff1d6029be61fc41007af60c7143e8d82d87891e2863c1978c92d2bc13a0266e4506b69c0012a8555d27ce05061e4ce8c656b32e937badeae
